# zoom-linux-sdk

./: .env.example  .gitignore  Dockerfile  SETUP.md  config.py  db_manager.py  docker_manager.py  doubts.md  main.py  project_structure.md  version.txt  zoom_containers.db
demo/: AuthServiceEventListener.cpp  AuthServiceEventListener.h  CMakeLists.txt  GenerateSDKJwtToken.cpp  GenerateSDKJwtToken.h  MeetingParticipantsCtrlEventListener.cpp  MeetingParticipantsCtrlEventListener.h  MeetingRecordingCtrlEventListener.cpp  MeetingRecordingCtrlEventListener.h  MeetingServiceEventListener.cpp  MeetingServiceEventListener.h  NetworkConnectionHandler.cpp  NetworkConnectionHandler.h  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  ZoomSDKVideoSource.cpp  ZoomSDKVideoSource.h  generate_jwt  meeting_sdk_demo.cpp
demo/lib/zoom_meeting_sdk/: libmeetingsdk.so.1
zoom-linux-sdk/: .gitattributes  .gitignore  SETUP.md  example.config.txt
zoom-linux-sdk/demo/: AudioProcessor.cpp  AudioProcessor.h  AzureSTTProcessor.cpp  AzureSTTProcessor.h  AzureSpeechSTT.cpp  AzureSpeechSTT.h  CMakeLists.txt  GenerateSDKJwtToken.cpp  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  config.txt  generate_jwt  meeting_sdk_demo.cpp
zoom-linux-sdk/demo/include/h/: setting_service_interface.h
